--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^0.9.0",
     "style-loader": "^0.18.2",
     "vue-loader": "^12.1.0",
+    "vue-resource": "^1.3.4",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
